[package]
name = "parameterize"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["termion"]

[dependencies]
termion = { version = "1.5", optional = true }
